`sticky-header` - Fix z-index for sticky sidebar to prevent overlap with README header

--- a/source/features/sticky-sidebar.css
+++ b/source/features/sticky-sidebar.css
@@ -35,6 +35,11 @@ Exclusively use simple sums and use `0px` instead of `0`
 .rgh-sticky-sidebar {
 	position: sticky;
 	top: var(--rgh-sticky-sidebar-offset, 0) !important;
+	/*
+		Make sure the container's z-index is higher than the readme header
+		to avoid the README header overlapping the sidebar.
+	 */
+	z-index: 9;
 }
 
 #discussion_bucket #partial-discussion-sidebar.rgh-sticky-sidebar-container {
